--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Hello!</h1>
+    <h1>Hello Danylo!!!</h1>
     <img src="wallpaper.jpg" alt="wallpaper">
 </body>
 </html>
